<resources>
    <string name="gcm_sender_id">1047691727716</string>
    <string name="app_name">PARKnSHOP</string>
    <string name="app_version">5.0</string>
    <string name="app_update_title">Update</string>
    <string name="app_update_msg">Please update your app.</string>
    <string name="app_quit">Confirm to leave Parknshop App?</string>
    <string name="tutorial_activity_start">start</string>
    <string name="tutorial_activity_skip">skip</string>
    <string name="g_e_connect">You may not have Internet connection, or network error.</string>
    <string name="g_e_network">Current file transfer error, please try again later.</string>
    <string name="g_e_token">Login time limit has expired, please sign in again.</string>
    <string name="gps_error">Cannot access to location service. To enable access, tap \"Settings\" -> \”Location Services\” -> turn on Location Services.</string>
    <string name="btn_ok">OK</string>
    <string name="btn_add">Add</string>
    <string name="btn_create">Create</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="btn_next">Next</string>
    <string name="btn_delete">Delete</string>
    <string name="btn_close">Close</string>
    <string name="btn_done">DONE</string>
    <string name="btn_use">APPLY</string>
    <string name="btn_continue">CONTINUE</string>
    <string name="btn_apply">apply</string>
    <string name="btn_ecoupon_apply">apply</string>
    <string name="understand_and_continue">understand &amp; continue</string>
    <string name="btn_remove">Remove</string>
    <string name="dismiss">Dismiss</string>
    <string name="btn_add_upper">ADD</string>
    <string name="tv_select">Select</string>
    <string name="btn_save">Save</string>
    <string name="permission_title">permission requirements</string>
    <string name="permission_contacts">This page requires permission to allow the case contacts</string>
    <string name="permission_location">This page will need to allow permission position</string>
    <string name="colon">：</string>
    <string name="fillin_pay_creditall">A credit card payment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_activity_sliding_menu_my_account">My Account</string>
    <string name="home_activity_sliding_menu_grocery_list">My List</string>
    <string name="home_activity_sliding_menu_suggest_list">Recommend List</string>
    <string name="home_activity_sliding_menu_my_list">My List</string>
    <string name="home_activity_sliding_menu_redemption">Redemption</string>
    <string name="home_activity_sliding_menu_m_coupon">M-Coupon</string>
    <string name="home_activity_sliding_menu_tips_ideas">Tips and Ideas</string>
    <string name="home_activity_sliding_menu_on_sale">On Sale</string>
    <string name="home_activity_sliding_menu_new_arrival">New Arrival</string>
    <string name="home_activity_sliding_menu_international">International</string>
    <string name="home_activity_sliding_menu_top_brands">Top Brands</string>
    <string name="home_activity_sliding_menu_recipes">Recipes</string>
    <string name="home_activity_sliding_menu_about_us">About Us</string>
    <string name="home_activity_sliding_menu_online_shopping">Online Shopping</string>
    <string name="home_activity_sliding_menu_quality_assurance">Quality Assurance</string>
    <string name="home_activity_sliding_menu_customer_service">Customer Service</string>
    <string name="home_activity_sliding_menu_settings">Settings</string>
    <string name="home_activity_sliding_menu_tutorial">Tutorial</string>
    <string name="home_activity_sliding_menu_facebook">Facebook</string>
    <string name="home_activity_sliding_menu_logout">Logout</string>
    <string name="quality_assurance_qa_dept">Quality Assurance Department</string>
    <string name="quality_assurance_food_safety_centre">Food Safety Centre</string>
    <string name="quality_assurance_fresh_check_food_hygiene_academy">Fresh Check Food Hygiene Academy</string>
    <string name="quality_assurance_own_brand_quality_assurance">Own Brand Quality Assurance</string>
    <string name="quality_assurance_non_food_quality_assurance">Non Food Quality Assurance</string>
    <string name="quality_assurance_legal_services">Legal Services</string>
    <string name="quality_assurance_licence_and_permit">Licence and Permit</string>
    <string name="online_shopping_app">How to Shop</string>
    <string name="online_shopping_delivery_detail">Delivery Details</string>
    <string name="online_shopping_payment_method">Payment Methods</string>
    <string name="online_shopping_refund_guraantee">Refund / Replace Guarantee</string>
    <string name="online_shopping_self_pickup">Self Pickup Service</string>
    <string name="about_us_about_us">About Us</string>
    <string name="about_us_qa_dept">Quality Assurance Department</string>
    <string name="about_us_social_responsibility">Social Responsibility</string>
    <string name="about_us_privacy_policy">Privacy Policy</string>
    <string name="about_us_terms_and_conditions">Terms And Conditions</string>
    <string name="about_us_disclaimer_and_notice">Disclaimer And Notice</string>
    <string name="about_us_corporation_information">Corporation Information</string>
    <string name="customer_service_faq">FAQ</string>
    <string name="customer_service_contact_us">Contact Us</string>
    <string name="customer_service_contact_us_email_subject">PARKnSHOP App Enquiry</string>
    <string name="customer_service_contact_us_os_version">OS version: </string>
    <string name="customer_service_contact_us_device_model">Device Model: </string>
    <string name="customer_service_contact_us_app_version">App version: </string>
    <string name="customer_service_contact_us_app_language">App Language: </string>
    <string name="customer_service_contact_us_date_n_time">Date &amp; Time: </string>
    <string name="customer_service_contact_us_langauge">English</string>
    <string name="product_list_fragment_out_of_stuck">Out of Stock</string>
    <string name="product_list_fragment_sold_out">Sold Out</string>
    <string name="product_list_fragment_sort_filter">SORT &amp; FILTER</string>
    <string name="was_price"></string>
    <string name="added_to_shopping_cart">Added to shopping cart</string>
    <string name="quantity_changed">Quantity Changed</string>
    <string name="home_activity_sliding_menu_my_cart">My Cart</string>
    <string name="home_activity_sliding_menu_dollar_sign">HK$</string>
    <string name="home_activity_shopping_cart_add_2_cart">Add To\nCart</string>
    <string name="home_activity_shopping_cart_add_2_grocery_item">Add To My List</string>
    <string name="home_activity_shopping_cart_remove_item">Remove Item</string>
    <string name="home_activity_sliding_menu_delivery_placeholder">Delivery Fee</string>
    <string name="home_activity_sliding_menu_subtotal_placeholder">Subtotal</string>
    <string name="home_activity_sliding_menu_empty_cart_message">Your cart is currently empty</string>
    <string name="home_activity_sliding_menu_empty_cart_browse_items">Why not browse items?</string>
    <string name="home_activity_sliding_menu_empty_cart_top_brands_market_place">Top Brands / Market Place</string>
    <string name="home_activity_sliding_menu_empty_cart_tip_idea">Tip and Idea</string>
    <string name="home_activity_sliding_menu_empty_cart_on_sale">On Sale</string>
    <string name="home_activity_sliding_menu_empty_cart_new_arrival">New Arrival</string>
    <string name="home_activity_sliding_menu_empty_cart_international">International</string>
    <string name="productlist_fragment_cart_panel_item_added">%s item added</string>
    <string name="productlist_fragment_cart_panel_items_added">%s items added</string>
    <string name="productlist_fragment_cart_panel_money_for_free_delivery">%s more to enjoy FREE delivery</string>
    <string name="product_detail_description">Product Description</string>
    <string name="product_detail_specification">Product Specifications</string>
    <string name="product_detail_use">Use</string>
    <string name="product_detail_precautions">Precautions</string>
    <string name="product_detail_ingredient">Ingredients</string>
    <string name="product_detail_add_to_cart">ADD TO CART</string>
    <string name="product_detail_update_cart">UPDATE CART</string>
    <string name="product_detail_new_product">New</string>
    <string name="product_detail_not_for_sell">This product is not available.</string>
    <string name="promotion_list">Promotion</string>
    <string name="discount_placeholder">Please link your membership card to enjoy the discounts!</string>
    <string name="link_the_member_ship_card">Link the membership card</string>
    <string name="account_detail">Account Details</string>
    <string name="membership_card">Membership Card</string>
    <string name="order_history">Order History</string>
    <string name="order_details_title">Order Details</string>
    <string name="contact_us_member_zone">Contact Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="faq">FAQs</string>
    <string name="member_notice">Member Notice</string>
    <string name="logout_dialog_title">Member Logout</string>
    <string name="myaccount_page_family_name">Family Name</string>
    <string name="myaccount_page_given_name">Given Name</string>
    <string name="myaccount_page_chinese_name">Chinese Name</string>
    <string name="myaccount_page_date_of_birth">Date of Birth</string>
    <string name="myaccount_page_mobile_number">Mobile Number</string>
    <string name="myaccount_page_tel_number">Tel Number</string>
    <string name="myaccount_page_my_information">MY INFORMATION</string>
    <string name="myaccount_page_contact_number">CONTACT NUMBER</string>
    <string name="myaccount_page_home_address">HOME ADDRESS</string>
    <string name="myaccount_page_my_language_preferred_in_card_communication">Language preferred in card communication</string>
    <string name="myaccount_page_opt_out_sms">I would like to opt out of SMS messages</string>
    <string name="myaccount_page_opt_out_emails">I would like to opt out of E-mails</string>
    <string name="myaccount_page_opt_out_direct_mailings">I would like to opt out of Direct Mailings</string>
    <string name="information">Information</string>
    <string name="title">Title</string>
    <string name="birthday">Birthday</string>
    <string name="region">Region</string>
    <string name="login_and_password">Login &amp; Password</string>
    <string name="password">Password</string>
    <string name="change_password">Change Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mr">Mr</string>
    <string name="ms">Ms</string>
    <string name="mrs">Mrs</string>
    <string name="miss">Miss</string>
    <string name="area">Area</string>
    <string name="district">District</string>
    <string name="address_new_address">New Address</string>
    <string name="address_flat_room">Flat / Room</string>
    <string name="address_floor">Floor</string>
    <string name="address_block">Block</string>
    <string name="address_building">Building</string>
    <string name="address_estate_name">Estate Name</string>
    <string name="address_street_no">Street No.</string>
    <string name="address_street_name">Street Name</string>
    <string name="email">E-mail</string>
    <string name="contact_no">Contact No.</string>
    <string name="use_as_delivery_address">Set As Default Delivery Address</string>
    <string name="register_page_martial_status">Martial Status</string>
    <string name="register_page_no_of_children">No. of Children</string>
</resources>