<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/title_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <parknshop.parknshopapp.View.CheckoutButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_button_is_alternative="true"
            app:checkout_button_title="@string/mr" />

        <parknshop.parknshopapp.View.CheckoutButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_button_title="@string/ms" />

        <parknshop.parknshopapp.View.CheckoutButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_button_title="@string/mrs" />

        <parknshop.parknshopapp.View.CheckoutButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_button_title="@string/miss" />
    </LinearLayout>



    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_edittext_title="@string/first_name" />


    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_edittext_title="@string/last_name" />


    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_edittext_title="@string/email" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <parknshop.parknshopapp.View.CheckoutPicker
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:checkout_picker_title="+852" />

        <parknshop.parknshopapp.View.CheckoutEditText
            android:id="@+id/contact_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            app:checkout_edittext_title="@string/contact_no"
            app:checkout_edittext_type="number" />
    </LinearLayout>

    <View
        android:background="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <TextView
        android:visibility="gone"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address_new_address"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <parknshop.parknshopapp.View.CheckoutEditText
            android:id="@+id/flat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_edittext_title="@string/address_flat_room" />

        <parknshop.parknshopapp.View.CheckoutEditText
            android:id="@+id/floor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_edittext_title="@string/address_floor" />
    </LinearLayout>

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_edittext_title="@string/address_block" />

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/building"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_edittext_title="@string/address_building" />

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/estate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_edittext_title="@string/address_estate_name" />

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/street_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_edittext_title="@string/address_street_no" />

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/street_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_edittext_title="@string/address_street_name" />


    <!-- app:checkout_piΩcker_data="0x7f0b0000"-->
    <parknshop.parknshopapp.View.CheckoutPicker
        android:id="@+id/area_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_picker_title="@string/area" />
    <!-- R.array.checkout_area -->

    <parknshop.parknshopapp.View.CheckoutPicker
        android:id="@+id/district_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkout_picker_title="@string/district" />


    <parknshop.parknshopapp.View.CheckoutCheckBoxWithText
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:checkboxtitle="@string/use_as_delivery_address"
        app:isSelected="false"
        app:selected_drawable="@drawable/sign_in_icn_tick_selected"
        app:unselected_drawable="@drawable/checkout_unfilled_circle" />


</LinearLayout>