<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneProfileView
            android:id="@+id/profile_img"
            app:drawable="@drawable/default_profile"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:orientation="horizontal" />

        <parknshop.parknshopapp.View.CheckoutHeader
            app:text="@string/information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItemPicker
            android:id="@+id/title_picker"
            app:member_picker_header="@string/title"
            app:member_picker_content="footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItem
            android:id="@+id/first_name"
            app:header="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItem
            android:id="@+id/last_name"
            app:header="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItemPicker
            android:id="@+id/birthday_picker"
            app:member_picker_header="@string/birthday"
            app:member_picker_content="footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItemPicker
            android:id="@+id/status_picker"
            app:member_picker_header="@string/register_page_martial_status"
            app:member_picker_content="footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItemPicker
            android:id="@+id/children_picker"
            app:member_picker_header="@string/register_page_no_of_children"
            app:member_picker_content="footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--<parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItemPicker-->
            <!--android:id="@+id/region_picker"-->
            <!--app:member_picker_header="@string/region"-->
            <!--app:member_picker_content="footer"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content" />-->

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItem
            android:id="@+id/region_picker"
            app:header="@string/region"
            app:member_picker_content="footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <parknshop.parknshopapp.View.CheckoutHeader
            app:text="@string/login_and_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItem
            android:id="@+id/email"
            app:header="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <parknshop.parknshopapp.Fragment.MemberZone.View.MemberZoneItemButton
            android:id="@+id/change_password"
            app:header="@string/password"
            app:content="@string/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</ScrollView>