<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <parknshop.parknshopapp.Fragment.Checkout.View.CheckoutHeaderPanel
        android:id="@+id/checkout_header_panel"
        app:checkout_dot_panel_number="4"
        app:checkout_dot_panel_prefix="checkout_step"
        app:checkout_dot_panel_current_step="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/title_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <parknshop.parknshopapp.View.CheckoutButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_button_is_alternative="true"
            app:checkout_button_title="@string/mr" />

        <parknshop.parknshopapp.View.CheckoutButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_button_title="@string/ms" />

        <parknshop.parknshopapp.View.CheckoutButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_button_title="@string/mrs" />

        <parknshop.parknshopapp.View.CheckoutButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:checkout_button_title="@string/miss" />
    </LinearLayout>

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/first_name"
        app:checkout_edittext_title="@string/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/last_name"
        app:checkout_edittext_title="@string/last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/email"
        app:checkout_edittext_title="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <parknshop.parknshopapp.View.CheckoutEditText
        android:id="@+id/contact_no"
        app:checkout_edittext_title="@string/contact_no"
        app:checkout_edittext_type="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <parknshop.parknshopapp.View.CheckoutButton
        android:id="@+id/con"
        android:layout_marginBottom="10dp"
        app:checkout_button_is_alternative="true"
        app:checkout_button_title="@string/btn_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>